--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sigmar&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -22,6 +24,12 @@ header {
 header h1 {
   color: #fff;
   text-align: center;
+  font-family: 'Sigmar', cursive;
+  font-size: 3rem;
+}
+
+h2 {
+  font-family: 'Sigmar', cursive;
 }
 
 main {
